# fatcubin

./: CMakeLists.txt  README.md
include/: fatcubin.h  mriera.h
src/: elf.c  fatcubin.cu  mriera.cu
src/sample_app/: sample_app.cu
src/test/: fatcubin.cu
